# Pi-OpenCast

./: .buildinfo  .coveragerc  .gitignore  .style.yapf  .travis.yml  CONTRIBUTING.md  Dockerfile  OpenCast.sh  Pipfile  README.md  README.rst  RaspberryCast.sh  RaspberryCast.yml  api.html  config.ini  config.yml  genindex.html  index.html  logging.yml  media_player.py  module.html  objects.inv  omxplayer.py  package-lock.json  process.py  py-modindex.html  pyproject.toml  raspberrycast.conf  search.html  searchindex.js  server.py  setup.sh  subtitle.py  video.py  video_controller.py  video_downloader.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_form.yaml  pull_request_template.md
.github/workflows/: documentation.yml  sanitize.yml  test.yml
ChromeExtension/: manifest.json  options.html
ChromeExtension/js/: background.js
FirefoxExtension/: manifest.json
FirefoxExtension/js/: background.js
OpenCast/: __init__.py  __main__.py  config.py  controller.py  download_logger.py  history.py  media_player.py  player_wrapper.py  server.py  subtitle.py  video.py  video_controller.py  video_downloader.py
OpenCast/app/: __init__.py  app_facade.py  error.py  facade.py  notification.py
OpenCast/domain/: __init__.py  constant.py  error.py
OpenCast/infra/: __init__.py  facade.py
OpenCast/util/: __init__.py  case.py  conversion.py  naming.py
RaspberryCast/: __init__.py  __main__.py  config.py  download_logger.py  history.py  media_player.py  server.py  video.py  video_controller.py  video_downloader.py
_autosummary/: OpenCast.app.command.album.html  OpenCast.app.command.artist.html  OpenCast.app.command.command.html  OpenCast.app.command.dispatcher.html  OpenCast.app.command.html  OpenCast.app.command.player.html  OpenCast.app.command.playlist.html  OpenCast.app.command.video.html  OpenCast.app.controller.album_monitor.html  OpenCast.app.controller.artist_monitor.html  OpenCast.app.controller.controller.html  OpenCast.app.controller.html  OpenCast.app.controller.module.html  OpenCast.app.controller.monitor.html  OpenCast.app.controller.monitoring_schema.html  OpenCast.app.controller.player.html  OpenCast.app.controller.player_monitor.html  OpenCast.app.controller.playlist_monitor.html  OpenCast.app.controller.root_monitor.html  OpenCast.app.controller.video_monitor.html  OpenCast.app.error.html  OpenCast.app.facade.html  OpenCast.app.html  OpenCast.app.notification.html  OpenCast.app.service.album.html  OpenCast.app.service.artist.html  OpenCast.app.service.error.html  OpenCast.app.service.html  OpenCast.app.service.module.html  OpenCast.app.service.player.html  OpenCast.app.service.playlist.html  OpenCast.app.service.service.html  OpenCast.app.service.video.html  OpenCast.app.tool.html  OpenCast.app.tool.json_encoder.html  OpenCast.app.workflow.app.html  OpenCast.app.workflow.factory.html  OpenCast.app.workflow.html  OpenCast.app.workflow.manager.html  OpenCast.app.workflow.player.html  (+68 more)
_sources/: index.rst.txt
_sources/_autosummary/: OpenCast.app.command.album.rst.txt  OpenCast.app.command.artist.rst.txt  (+106 more)
script/: array.sh  cli_builder.sh  deps.sh  env.sh  gen_cli.sh  logging.sh
specs/: .speccy.yml  openapi.yml
static/: history.js  remote.css  remote.js
template/: config.yml  opencast.service
test/: __init__.py  config_test.py  controller_test.py  history_test.py  player_wrapper_test.py  test_config.py  util.py  video_controller_test.py  video_test.py
tests/: test_config.py
tool/: build.sh  deps.sh  format.sh  generate.sh  lint.sh  serve.sh  service-back.sh  service-front.sh  service.sh  test.sh
views/: remote.tpl
webapp/: .env  package-lock.json  package.json
webapp-old/: package.json  server.js
(+301 files in other folders)
