[tool.poetry]
name = "Opencast"
version = "1.4.2"
description = "A client-server media player that transforms your Raspberry Pi into an awesome streaming device"
authors = [
"Luc Sinet <luc.sinet@gmail.com>"
]
license = "MIT"

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/Tastyep/Pi-OpenCast"
keywords = ['raspberry', 'opencast', 'chromecast']

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10"
pyyaml = "^5.3.1"
"hurry.filesize" = "^0.9"
transitions = "^0.8.5"
structlog = "^20.1.0"
colorama = "^0.4.4"
python-vlc = "^3.0.9113"
aiohttp = "^3.6.2"
janus = "^0.6.1"
aiohttp-middlewares = "^1.1.0"
tinydb = "^4.3.0"
dacite = "^1.5.1"
marshmallow = "^3.9.1"
marshmallow_enum = "^1.5.1"
youtube_dl = "^2020.11.18"
aiohttp-apispec = "^2.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pytest-cov = "^2.4"
sphinx_rtd_theme = "^0.5.0"
sphinx = "^3.3.1"
mypy = "^0.790"
sphinx-autodoc-typehints = "^1.11.1"
sphinxcontrib-openapi = "^0.7.0"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
coverage = "^5.3"

[tool.poetry.scripts]
my-script = 'OpenCast:main'

[tool.isort]
profile = "black"
src_paths = ["OpenCast", "test"]
