[tool.poetry]
name = "Opencast"
version = "1.4.4"
description = "A client-server media player that transforms your Raspberry Pi into an awesome streaming device"
authors = [
"Luc Sinet <luc.sinet@gmail.com>"
]
license = "MIT"

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/Tastyep/Pi-OpenCast"
keywords = ['raspberry', 'opencast', 'chromecast']

[tool.poetry.dependencies]
python = "^3.7"
"hurry.filesize" = "^0.9"
transitions = "^0.8.6"
structlog = "^20.2.0"
colorama = "^0.4.4"
python-vlc = "^3.0.9113"
aiohttp = "^3.7.3"
janus = "^0.6.1"
aiohttp-middlewares = "^1.1.0"
tinydb = "^4.4.0"
marshmallow = "^3.9.1"
marshmallow_enum = "^1.5.1"
aiohttp-apispec = "^2.2.1"
dynaconf = "^3.1.2"
yt-dlp = "^2021.10.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.11"
sphinx_rtd_theme = "^0.5.1"
sphinx = "^4.4.0"
mypy = "^0.800"
sphinx-autodoc-typehints = "^1.11.1"
sphinxcontrib-openapi = "^0.7.0"
mistune = "<2.0.0"
flake8 = "^3.8.4"
isort = "^5.7.0"
coverage = "^5.4"
sphinxemoji = "^0.1.8"
black = "^21.12b0"

[tool.poetry.scripts]
my-script = 'OpenCast:main'

[tool.isort]
profile = "black"
src_paths = ["OpenCast", "test"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "NOTSET"
